[package]
name = "truffles"
version = "0.1.0"
authors = ["ZZ <mrzenioszeniou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper   = "=0.11.0"
regex     = "=1.3.7"
reqwest   = "=0.10.4"
futures   = "=0.3.5"
tokio     = { version = "=0.2.21", features = ["full"] }
indicatif = "=0.14.0"