[package]
name = "truffles"
version = "0.1.0"
authors = ["trypes <19194653+trypes@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper         = "0.11.0"
regex           = "1.3.7"
reqwest         = "0.10.6"
futures         = "0.3.5"
tokio           = { version = "0.2.21", features = ["full"] }
indicatif       = "0.14.0"
serde           = "1.0.111"
serde_derive    = "1.0.111"
csv             = "1.1.3"
chrono          = "0.4.11"
dirs            = "2.0.2"
structopt       = "0.3.15"

[dev-dependencies]
serde_json      = "1.0.55"